# ad-groups-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  policy.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
ad_groups_mcp/: __init__.py  __main__.py  acl_auditor.py  ad_query.py  config.py  event_reader.py  models.py  policy_engine.py  replication.py  report.py  review_resolver.py  server.py  sqlite_store.py
docs/: demo_report.html  index.html
scripts/: generate_live_report.py  pre-commit-check.sh
templates/: new-group.yaml
tests/: conftest.py  test_acl_auditor.py  test_config.py  test_event_reader.py  test_policy_engine.py  test_properties.py  test_replication.py  test_review_resolver.py  test_server.py  test_server_tools.py  test_sqlite_store.py  test_startup.py  test_theme.py  test_trend_chart.py
